criacao da primeira tela

--- a/AppMaui-NumeroDaSorte/MainPage.xaml
+++ b/AppMaui-NumeroDaSorte/MainPage.xaml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppMaui_NumeroDaSorte.MainPage"
-             Title="MainPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+<ContentPage
+    x:Class="AppMaui_NumeroDaSorte.MainPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="MainPage">
+    <VerticalStackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+        <Image
+            HeightRequest="115"
+            Source="logo_green.svg"
+            WidthRequest="74" />
+        <Label
+            Margin="0,30,0,30"
+            HorizontalOptions="Center"
+            Text="Número da sorte"
+            TextColor="#00AB37"
+            VerticalOptions="Center" />
+        <Button HorizontalOptions="Center" Text="Gerar número da sorte." Margin="0,50,0,0"/>
     </VerticalStackLayout>
 </ContentPage>
